--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,15 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/misc.xml
+.idea/encodings.xml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 *.iws
 *.iml
 *.ipr
